# TestSo666

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jing/testso/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mylib.cpp  mylib.h
app/src/main/java/com/jing/testso/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jing/testso/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
